--- a/_data/slides.yml
+++ b/_data/slides.yml
@@ -184,6 +184,15 @@
 
 #############
 
+- id: a56177187
+  title: Défi culturel
+  desc: |
+    Mais... la communauté des adeptes des fours solaires dépasse les frontières!
+    <img src="images/picnic.png" />
+    <img src="images/picnic2.png" />
+
+#############
+
 - id: a56186
   title: Le défi de la friture
   desc: |
